@startuml

title __REPOSITORY's Class Diagram__\n

  namespace repository {
    class repository.Comment {
        - content : String
        - created : Date
        + Comment()
        + Comment()
        + getContent()
        + getCreated()
    }
  }
  

  namespace repository {
    class repository.DataSource {
        + getInstance()
        + save()
    }
  }
  

  namespace repository {
    interface repository.Repository {
        {abstract} + create()
        {abstract} + delete()
        {abstract} + read()
        {abstract} + readAll()
        {abstract} + update()
    }
  }
  

  namespace repository {
    abstract class repository.Task {
        - comments : ArrayList<Comment>
        - creaded : Date
        - description : String
        - title : String
        + Task()
        + Task()
        + Task()
        {abstract} + create()
        {abstract} + delete()
        + getCreaded()
        + getDescription()
        + getTitle()
        {abstract} + read()
        {abstract} + readAll()
        {abstract} + update()
        # getComments()
    }
  }
  

  namespace repository {
    abstract class repository.TaskList {
        - created : Date
        - name : String
        - tasks : HashMap<String, Task>
        + TaskList()
        + TaskList()
        + TaskList()
        {abstract} + create()
        {abstract} + delete()
        + getCreated()
        + getName()
        {abstract} + read()
        {abstract} + readAll()
        {abstract} + update()
        # getTasks()
    }
  }
  

  namespace repository {
    class repository.TaskListTXT {
        + TaskListTXT()
        + TaskListTXT()
        + TaskListTXT()
        + create()
        + delete()
        + read()
        + readAll()
        + update()
    }
  }
  

  namespace repository {
    class repository.TaskTXT {
        + TaskTXT()
        + TaskTXT()
        + TaskTXT()
        + create()
        + delete()
        + read()
        + readAll()
        + update()
    }
  }
  

  repository.Task .up.|> repository.Repository
  repository.TaskList .up.|> repository.Repository
  repository.TaskListTXT -up-|> repository.TaskList
  repository.TaskTXT -up-|> repository.Task


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
